Updated styles to no longer stretch blog images

--- a/app/webpacker/stylesheets/components/cms/_shared.scss
+++ b/app/webpacker/stylesheets/components/cms/_shared.scss
@@ -22,6 +22,7 @@
   img {
     width: 336px;
     aspect-ratio: 3/2;
+    object-fit: cover;
     flex-grow: 0;
   }
 
